test/files/neg/t3115.check
t3115.scala:6: error: object Math in object sc is deprecated: 
  println(sc.Math)
             ^
t3115.scala:7: error: object Math in package scala is deprecated: use scala.math package instead
  println(scala.Math)
                ^
t3115.scala:8: error: object Math in package scala is deprecated: use scala.math package instead
  scala.Math.Pi
        ^
three errors found
